--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kube-scrambler",
+  "name": "kube-skrambler",
   "version": "1.0.0",
   "description": "Fast and complete 3x3 Rubik's cube scrambler",
   "main": "lib/index.js",
